tdf#112507 RTF import: fix too narrow table cell

Commit e6ec0794858df1444f43659b568119bf126a90e6 (tdf#104937 RTF import:
\trwWidthA is an absolute value, 2017-08-29) changed the handling of the
fake empty cell at the end of table rows so that the parameter of the
control word is an absolute, not a relative value.  Turns out this
wasn't correct, the DOCX equivalent of that bugdoc shows that the
parameter is a relative value after all. The RTF spec also talks about a
"width", which is assumed to be a relative value.

So fix that bug in a different way again (by making sure that this
additional fake cell contributes to the total width of the table, so
column separators are counted correctly), this time without less
side-effects.

(cherry picked from commit 409c230ed70707eeb5e6fcd4ab904bb4a411608a)

Change-Id: Ic64fd3a6abae8e0398e8e77123f0473d73f0c4b0